adding scss style for item detail

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,11 @@
   min-height: 100vh;
 }
 
+.container-detail-item {
+  width: 70%;
+  margin: 16px auto 16px auto;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
