adding routing and main container

--- a/client/src/components/commons/Layout.scss
+++ b/client/src/components/commons/Layout.scss
@@ -1,5 +1,10 @@
-.home {
+.App {
   /* text-align: center; */
   background-color: #eeeeee;
   min-height: 100vh;
+}
+
+.container-detail-item {
+  width: 70%;
+  margin: 16px auto 16px auto;
 }
