--- a/client/src/components/SearchBox/SearchBox.scss
+++ b/client/src/components/SearchBox/SearchBox.scss
@@ -1,7 +1,4 @@
-$PRIMARY: #ffe600;
-$GRAY01: #999999;
-$GRAY02: #eeeeee;
-$GRAY03: #666666;
+@import "../../styles/colors.scss";
 
 .main-header {
   background-color: $PRIMARY;
