--- a/client/src/components/SearchResult/SearchResult.scss
+++ b/client/src/components/SearchResult/SearchResult.scss
@@ -1,4 +1,4 @@
-$GRAY01: #999999;
+@import "../../styles/colors.scss";
 
 .main {
   background-color: white;
@@ -58,10 +58,6 @@ $GRAY01: #999999;
 }
 
 @media screen and (max-width: 960px) {
-  // .img-text-container {
-  //   display: inline;
-  // }
-
   .description {
     font-size: 18px;
     width: 200px;
