handle input error

--- a/client/src/components/SearchBox/SearchBox.scss
+++ b/client/src/components/SearchBox/SearchBox.scss
@@ -36,6 +36,11 @@
   padding-top: 13px;
 }
 
+.container-detail-item {
+  width: 70%;
+  margin: 16px auto 16px auto;
+}
+
 .search-button {
   height: 35px;
   right: 2px;
